// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`minRatio\` option matches snapshot for \`0\` value: assets 1`] = `
Array [
  "5b1f36bc41ab31f5b801d48ba1d65781.png",
  "96621d3c37d96ad3bf792fcc848d912f.svg",
  "js.js?var=5a02b232684b82d96c60",
]
`;

exports[`when applied with \`minRatio\` option matches snapshot for \`0\` value: errors 1`] = `Array []`;

exports[`when applied with \`minRatio\` option matches snapshot for \`0\` value: warnings 1`] = `Array []`;

exports[`when applied with \`minRatio\` option matches snapshot for \`1\` value: assets 1`] = `
Array [
  "5b1f36bc41ab31f5b801d48ba1d65781.png",
  "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
  "96621d3c37d96ad3bf792fcc848d912f.svg",
  "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
  "js.js.gz?var=5a02b232684b82d96c60",
  "js.js?var=5a02b232684b82d96c60",
]
`;

exports[`when applied with \`minRatio\` option matches snapshot for \`1\` value: errors 1`] = `Array []`;

exports[`when applied with \`minRatio\` option matches snapshot for \`1\` value: warnings 1`] = `Array []`;
